Updated completed Spanish translation

--- a/compiler/ecs/Makefile
+++ b/compiler/ecs/Makefile
@@ -32,7 +32,8 @@ SOURCES = \
 	ecs.ec
 
 RESOURCES = \
-	locale/zh_CN/LC_MESSAGES/ecs.mo
+	locale/zh_CN/LC_MESSAGES/ecs.mo \
+	locale/es_ES/LC_MESSAGES/ecs.mo
 
 # CROSS-PLATFORM MAGIC
 
@@ -88,6 +89,7 @@ $(TARGET): $(SOURCES) $(RESOURCES) $(SYMBOLS) $(OBJECTS) | objdir
 	$(CC) $(OFLAGS) $(OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
 	$(STRIP) $(STRIPOPT) $(TARGET)
 	$(EAR) awq $(TARGET) locale/zh_CN/LC_MESSAGES/ecs.mo "locale/zh_CN/LC_MESSAGES"
+	$(EAR) awq $(TARGET) locale/es_ES/LC_MESSAGES/ecs.mo "locale/es_ES/LC_MESSAGES"
 	$(call cpq,$(TARGET),../../obj/$(PLATFORM)/bin/)
 
 # SYMBOL RULES
