--- a/eda/libeda/Makefile
+++ b/eda/libeda/Makefile
@@ -75,7 +75,8 @@ SOURCES = \
 	src/idList.ec
 
 RESOURCES = \
-	locale/zh_CN/LC_MESSAGES/EDA.mo
+	locale/zh_CN/LC_MESSAGES/EDA.mo \
+	locale/es_ES/LC_MESSAGES/EDA.mo
 
 # TOOLCHAIN
 export LD_LIBRARY_PATH = ../../obj/$(PLATFORM)/lib/
@@ -126,6 +127,7 @@ $(TARGET): $(SOURCES) $(RESOURCES) $(SYMBOLS) $(OBJECTS) | objdir
 	$(CC) $(OFLAGS) $(OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME) $(SONAME)
 	$(STRIP) $(STRIPOPT) $(TARGET)
 	$(EAR) awq $(TARGET) locale/zh_CN/LC_MESSAGES/EDA.mo "locale/zh_CN/LC_MESSAGES"
+	$(EAR) awq $(TARGET) locale/es_ES/LC_MESSAGES/EDA.mo "locale/es_ES/LC_MESSAGES"
 	$(call cpq,$(TARGET),../../$(SODESTDIR))
 ifdef LINUX
 	ln -sf $(LP)$(MODULE)$(SO).0.44 ../../$(SODESTDIR)$(LP)$(MODULE)$(SO).0
