ear/i18n: Fixed last commit Makefiles & project

--- a/ear/cmd/Makefile
+++ b/ear/cmd/Makefile
@@ -96,7 +96,7 @@ $(TARGET): $(SOURCES) $(RESOURCES) $(SYMBOLS) $(OBJECTS) | objdir
 	$(STRIP) $(STRIPOPT) $(TARGET)
 	$(EAR) awq $(TARGET) ../extract/obj/release.$(PLATFORM)/extract$(E) ""
 	$(EAR) awq $(TARGET) locale/zh_CN/LC_MESSAGES/ear.mo "locale/zh_CN/LC_MESSAGES"
-	$(EAR) aw $(TARGET) locale/es_ES/LC_MESSAGES/ear.mo "locale/es_ES/LC_MESSAGES"
+	$(EAR) awq $(TARGET) locale/es_ES/LC_MESSAGES/ear.mo "locale/es_ES/LC_MESSAGES"
 	$(call cpq,$(TARGET),../../obj/$(PLATFORM)/bin)
 
 # SYMBOL RULES
