--- a/ear/extract/Makefile
+++ b/ear/extract/Makefile
@@ -61,7 +61,7 @@ RESOURCES1 = \
 	../../ecere/res/vanilla/ecere/status/folderOpen.png \
 	locale/zh_CN/LC_MESSAGES/extract.mo
 RESOURCES2 = \
-	locale/es_ES/extract.mo
+	locale/es_ES/LC_MESSAGES/extract.mo
 
 # CROSS-PLATFORM MAGIC
 
@@ -156,7 +156,7 @@ endif
 	$(EAR) awq $(TARGET) ../../ecere/res/vanilla/ecere/places/driveRemote.png ../../ecere/res/vanilla/ecere/places/folder.png ../../ecere/res/vanilla/ecere/places/folderRemote.png ../../ecere/res/vanilla/ecere/places/networkServer.png ../../ecere/res/vanilla/ecere/places/networkWorkgroup.png "ecere/places"
 	$(EAR) awq $(TARGET) ../../ecere/res/vanilla/ecere/status/folderOpen.png "ecere/status"
 	$(EAR) awq $(TARGET) locale/zh_CN/LC_MESSAGES/extract.mo "locale/zh_CN/LC_MESSAGES"
-	$(EAR) awq $(TARGET) locale/es_ES/extract.mo "locale/es_ES/LC_MESSAGES"
+	$(EAR) awq $(TARGET) locale/es_ES/LC_MESSAGES/extract.mo "locale/es_ES/LC_MESSAGES"
 
 # SYMBOL RULES
 
