ide: makefile generation and makefiles: added NOSTRIP option.
Conflicts:

	compiler/ecc/Makefile
	compiler/ecp/Makefile
	compiler/ecs/Makefile
	compiler/libec/Makefile
	eda/drivers/sqlite/Makefile
	eda/drivers/sqliteCipher/Makefile
	eda/libeda/Makefile

--- a/compiler/bootstrap/ecp/Makefile
+++ b/compiler/bootstrap/ecp/Makefile
@@ -77,7 +77,9 @@ objdir:
 
 $(TARGET): $(SOURCES) $(RESOURCES) | objdir $(SYMBOLS) $(OBJECTS)
 	$(CC) $(OFLAGS) $(OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
+ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
+endif
 
 $(OBJ)ecp.o: bootstrap/ecp.c
 	$(CC) $(CFLAGS) $(FVISIBILITY) -c bootstrap/ecp.c -o $(OBJ)ecp.o
