--- a/compiler/bootstrap/ecc/Makefile
+++ b/compiler/bootstrap/ecc/Makefile
@@ -78,7 +78,9 @@ objdir:
 
 $(TARGET): $(SOURCES) $(RESOURCES) | objdir $(SYMBOLS) $(OBJECTS)
 	$(CC) $(OFLAGS) $(OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
+ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
+endif
 
 # OBJECT RULES
 
