--- a/epj2make/Makefile
+++ b/epj2make/Makefile
@@ -121,7 +121,9 @@ $(SYMBOLS): | objdir
 $(OBJECTS): | objdir
 $(TARGET): $(SOURCES) $(RESOURCES) $(SYMBOLS) $(OBJECTS) | objdir
 	$(CC) $(OFLAGS) $(OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
+ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
+endif
 	$(EAR) awq $(TARGET) ../include.mk ""
 	$(call cpq,$(TARGET),../obj/$(PLATFORM)/bin/)
 
