ide: First attempt at a toolbar.

--- a/ide/Makefile
+++ b/ide/Makefile
@@ -253,6 +253,26 @@ RESOURCES = \
 	$(RES)actions/editCopy.png \
 	$(RES)actions/editDelete.png \
 	$(RES)actions/delete2.png \
+	$(RES)actions/build.png \
+	$(RES)actions/clean.png \
+	$(RES)actions/debug.png \
+	$(RES)actions/docOpen.png \
+	$(RES)actions/docSave.png \
+	$(RES)actions/docSaveAll.png \
+	$(RES)actions/pause.png \
+	$(RES)actions/projAdd.png \
+	$(RES)actions/projNew.png \
+	$(RES)actions/projOpen.png \
+	$(RES)actions/rebuild.png \
+	$(RES)actions/regMakefile.png \
+	$(RES)actions/relink.png \
+	$(RES)actions/restart.png \
+	$(RES)actions/run.png \
+	$(RES)actions/skipBreaks.png \
+	$(RES)actions/stepInto.png \
+	$(RES)actions/stepOut.png \
+	$(RES)actions/stepOver.png \
+	$(RES)actions/stopDebug.png \
 	$(RES)codeMarks/breakpoint.png \
 	$(RES)codeMarks/breakpointDisabled.png \
 	$(RES)codeMarks/breakpointHalf.png \
@@ -355,7 +375,9 @@ ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
 endif
 	$(EAR) awq $(TARGET) res/ecere.jpg res/ecereBack.jpg res/icon.png ../include.mk ""
-	$(EAR) awq $(TARGET) $(RES)actions/attach.png $(RES)actions/delete.png $(RES)actions/detach.png $(RES)actions/docNew.png $(RES)actions/editCopy.png $(RES)actions/editDelete.png $(RES)actions/delete2.png "actions"
+	$(EAR) awq $(TARGET) $(RES)actions/attach.png $(RES)actions/delete.png $(RES)actions/detach.png $(RES)actions/docNew.png $(RES)actions/editCopy.png $(RES)actions/editDelete.png $(RES)actions/delete2.png $(RES)actions/build.png $(RES)actions/clean.png $(RES)actions/debug.png "actions"
+	$(EAR) awq $(TARGET) $(RES)actions/docOpen.png $(RES)actions/docSave.png $(RES)actions/docSaveAll.png $(RES)actions/pause.png $(RES)actions/projAdd.png $(RES)actions/projNew.png $(RES)actions/projOpen.png $(RES)actions/rebuild.png $(RES)actions/regMakefile.png $(RES)actions/relink.png "actions"
+	$(EAR) awq $(TARGET) $(RES)actions/restart.png $(RES)actions/run.png $(RES)actions/skipBreaks.png $(RES)actions/stepInto.png $(RES)actions/stepOut.png $(RES)actions/stepOver.png $(RES)actions/stopDebug.png "actions"
 	$(EAR) awq $(TARGET) $(RES)codeMarks/breakpoint.png $(RES)codeMarks/breakpointDisabled.png $(RES)codeMarks/breakpointHalf.png $(RES)codeMarks/breakpointHalfDisabled.png $(RES)codeMarks/cursor.png $(RES)codeMarks/cursorError.png $(RES)codeMarks/topFrame.png $(RES)codeMarks/topFrameError.png $(RES)codeMarks/topFrameHalf.png $(RES)codeMarks/topFrameHalfError.png "codeMarks"
 	$(EAR) awq $(TARGET) $(RES)others/mousePointer.png "others"
 	$(EAR) awq $(TARGET) locale/zh_CN/LC_MESSAGES/ide.mo "locale/zh_CN/LC_MESSAGES"
