eda/drivers;sqlite,sqliteCipher; updated cipher's Makefile with libffi stuff and removed double -lecere for both sqlite drivers.

--- a/eda/drivers/sqlite/Makefile
+++ b/eda/drivers/sqlite/Makefile
@@ -66,7 +66,7 @@ OFLAGS = -m32 \
 	 -L../../../obj/$(PLATFORM)/bin \
 	 -L../../../obj/$(PLATFORM)/lib
 
-LIBS = -lecere $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
+LIBS = $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
 UPXFLAGS = -9 -q
 
