deps/libffi: Using an Ecere project and Makefile to build libffi rather than a pre-compiled win32/mingw binary

--- a/eda/drivers/sqlite/Makefile
+++ b/eda/drivers/sqlite/Makefile
@@ -88,7 +88,7 @@ CFLAGS += \
 
 ifneq "$(TARGET_TYPE)" "staticlib"
 OFLAGS += \
-	 -L../../../deps/libffi-3.0.11/i686-pc-mingw32/.libs
+	 -L../../../deps/libffi-3.0.11/obj/release.$(PLATFORM)
 endif
 
 else
