--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends:
  lib32ncurses5-dev [amd64],
  lib32z1-dev [amd64],
  libc6-dev-i386 [amd64],
+ lib32ffi-dev [amd64] 
  libfontconfig1-dev,
  libfreetype6-dev,
  libgif-dev,
