EDA/SQLite: Tweaked Makefiles to specify include path of /usr/include/i686-linux-gnu on Linux for fixing 64 bit build on Oneiric

--- a/eda/drivers/sqlite/Makefile
+++ b/eda/drivers/sqlite/Makefile
@@ -94,6 +94,9 @@ endif
 else
 ifdef LINUX
 
+CFLAGS += \
+	 -I/usr/include/i686-linux-gnu
+
 ifneq "$(TARGET_TYPE)" "staticlib"
 LIBS += -lpthread -ldl -lsqlite3
 endif
