Renamed source package back to ecere rather than ecere-sdk; Fixed line too long in changelog

--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: ecere-sdk
+Source: ecere
 Section: devel
 Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
