Makefiles: Tweaks for Debian - Installing changelogs - Using Environment's CFLAGS, CPPFLAGS and LDFLAGS when DEBIAN_PACKAGE is set - crossplatform.mk: applications will look for Ecere libraries in /usr/lib/ec/ - Creating /usr/lib/ec and .so symlinks to libraries inside

--- a/compiler/libec/Makefile
+++ b/compiler/libec/Makefile
@@ -12,6 +12,11 @@ OBJ = obj/$(CONFIG).$(PLATFORM)/
 
 RES = 
 
+ifndef DEBIAN_PACKAGE
+CFLAGS =
+endif
+OFLAGS =
+
 # CROSS-PLATFORM MAGIC
 
 include ../../include.mk
@@ -151,16 +156,16 @@ EAR := $(call psep,../../obj/$(PLATFORM)/bin/ear)
 
 # FLAGS
 
-CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w -I../bootstrap/include
-
 # BSL CFLAGS
 BSL_CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w
+
+CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w -I../bootstrap/include
 
 CECFLAGS =
 
 ECFLAGS = -nolinenumbers
 
-OFLAGS = -m32 \
+OFLAGS += -m32 \
 	 -L../../obj/$(PLATFORM)/bin \
 	 -L../../obj/$(PLATFORM)/lib
 
