--- a/ecere/Makefile
+++ b/ecere/Makefile
@@ -11,6 +11,11 @@ OBJ = obj/$(CONFIG).$(PLATFORM)/
 
 RES = res/
 
+ifndef DEBIAN_PACKAGE
+CFLAGS =
+endif
+OFLAGS =
+
 # CROSS-PLATFORM MAGIC
 
 include ../include.mk
@@ -840,7 +845,7 @@ EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
 
 # FLAGS
 
-CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
+CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
 	 -DBUILDING_ECERE_COM \
 	 -Isrc/gfx/drivers/harfbuzz
 
@@ -848,7 +853,7 @@ CECFLAGS =
 
 ECFLAGS = -nolinenumbers -defaultns ecere
 
-OFLAGS = -m32
+OFLAGS += -m32
 
 LIBS = -ljpeg -lpng -lz -lfreetype $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
