--- a/eda/drivers/sqlite/Makefile
+++ b/eda/drivers/sqlite/Makefile
@@ -11,6 +11,11 @@ OBJ = obj/$(CONFIG).$(PLATFORM)/
 
 RES = 
 
+ifndef DEBIAN_PACKAGE
+CFLAGS =
+endif
+OFLAGS =
+
 # CROSS-PLATFORM MAGIC
 
 include ../../../include.mk
@@ -56,13 +61,13 @@ EAR := $(call psep,../../../obj/$(PLATFORM)/bin/ear)
 
 # FLAGS
 
-CFLAGS = -fmessage-length=0 -O2 -m32 $(FPIC) -w
+CFLAGS += -fmessage-length=0 -O2 -m32 $(FPIC) -w
 
 CECFLAGS =
 
 ECFLAGS = -nolinenumbers
 
-OFLAGS = -m32 \
+OFLAGS += -m32 \
 	 -L../../../obj/$(PLATFORM)/bin \
 	 -L../../../obj/$(PLATFORM)/lib
 
