--- a/epj2make/Makefile
+++ b/epj2make/Makefile
@@ -65,6 +65,11 @@ RESOURCES = \
 	locale/zh_CN/LC_MESSAGES/epj2make.mo \
 	../include.mk
 
+ifndef DEBIAN_PACKAGE
+CFLAGS =
+endif
+OFLAGS =
+
 # CROSS-PLATFORM MAGIC
 
 include ../include.mk
@@ -79,14 +84,14 @@ EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
 
 # FLAGS
 
-CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
+CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
 	 -DMAKEFILE_GENERATOR
 
 CECFLAGS =
 
 ECFLAGS = -nolinenumbers
 
-OFLAGS = -m32 \
+OFLAGS += -m32 \
 	 -L../obj/$(PLATFORM)/bin \
 	 -L../obj/$(PLATFORM)/lib
 
