--- a/deps/zlib/Makefile
+++ b/deps/zlib/Makefile
@@ -49,13 +49,18 @@ SOURCES = \
 
 RESOURCES =
 
+ifndef DEBIAN_PACKAGE
+CFLAGS =
+endif
+OFLAGS =
+
 # CROSS-PLATFORM MAGIC
 
 include ../../include.mk
 
 # FLAGS
 
-CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w
+CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w
 
 LIBS = $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
