--- a/ecere/Makefile.ecereCOM
+++ b/ecere/Makefile.ecereCOM
@@ -11,6 +11,11 @@ OBJ = obj/$(MODULE).$(CONFIG).$(PLATFORM)/
 
 RES = 
 
+ifndef DEBIAN_PACKAGE
+CFLAGS =
+endif
+OFLAGS =
+
 # CROSS-PLATFORM MAGIC
 
 include ../include.mk
@@ -127,14 +132,14 @@ EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
 
 # FLAGS
 
-CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
+CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
 	 -DECERE_COM_MODULE -DBUILDING_ECERE_COM -DECERE_NOFILE
 
 CECFLAGS =
 
 ECFLAGS = -nolinenumbers -defaultns ecere
 
-OFLAGS = -m32
+OFLAGS += -m32
 
 LIBS = $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
