--- a/ecere/Makefile.vanilla
+++ b/ecere/Makefile.vanilla
@@ -643,6 +643,11 @@ RESOURCES3 = \
 	$(RES)unicode/derivedGeneralCategoryStripped.txt \
 	locale/zh_CN/LC_MESSAGES/ecere.mo
 
+ifndef DEBIAN_PACKAGE
+CFLAGS =
+endif
+OFLAGS =
+
 # CROSS-PLATFORM MAGIC
 
 include ../include.mk
@@ -656,7 +661,7 @@ EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
 
 # FLAGS
 
-CFLAGS = -fmessage-length=0 -Os -m32 $(FPIC) -w \
+CFLAGS += -fmessage-length=0 -Os -m32 $(FPIC) -w \
 	 -DBUILDING_ECERE_COM -DECERE_STATIC -DECERE_VANILLA -DNOBLENDING \
 	 -Isrc/gfx/drivers/harfbuzz
 
